# anomalywatchdog

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
anomalywatchdog/: __init__.py  anomaly_watchdog.py  config_ad.yaml  core.py
anomalywatchdog/anomaly_features/: CalendarFeatureCreator.py  create_features.py
anomalywatchdog/data_treatment/: data_handler.py  input_checker.py  model_updater.py
anomalywatchdog/engine/: model_factory.py  model_predictor.py  model_trainer.py
anomalywatchdog/modelling/: abstract_model.py  auto_arima_model.py  autoencoder_conv_model.py  autoencoder_lstm_model.py  prophet_model.py
anomalywatchdog/utils/: create_fourier_terms.py  create_sequences.py  data_normalizer.py  kruskal_test_seasonality.py
tests/: test_build.py
tests/data_treatment/: test_data_handler.py  test_input_checker.py  test_model_updater.py
tests/engine/: test_main_engine.py
tests/modelling/: test_auto_arima_model.py  test_autoencoder_conv_model.py  test_autoencoder_lstm_model.py  test_prophet_model.py
tests/utils/: test_create_fourier_terms.py  test_create_sequences.py  test_kruskal_test_seasonality.py
