[tool.poetry]
name = "anomalywatchdog"
version = "0.0.7"
description = ""
authors = ["alexis-vazquez <alexis.vazquez@adevinta.com>", "enric-pampols <enric.pampols@adevinta.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "3.2.1"
PyYAML = "^6.0"
pandas = "1.5.2"
tensorflow = "^2.16.1"
#tensorflow = {version = "^2.16.1", markers = "sys_platform != 'darwin' or platform_machine != 'arm64'"}
#tensorflow-macos = {version = "^2.16.1", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
prophet = "^1.1.5"
pmdarima = "^2.0.4"
spicy = "^0.16.0"
holidays = "^0.50"
wheel = "^0.43.0"
scikit-learn = "^1.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"


[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test"
]

minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

